・リファクタリング（ArtifactPair→Moldなど） ・アクションをセパレータで分離できるように、カテゴリを付与できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2635 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages.properties
@@ -9,3 +9,5 @@ ProjectBuilderImpl.21=Write file
 ProjectBuilderImpl.23=Set up classpath
 ProjectBuilderImpl.25=Set up JDK compliance settings
 ProjectBuilderImpl.28=Add database dependencies to pom.xml
+MoldResolverImpl.1=Resolve mold
+MoldResolverImpl.2=Search matched mold
