--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -20,10 +20,11 @@ ConfigureProjectPage.7=Artifact ID
 ConfigureProjectPage.8=Use project name as artifact ID
 ConfigureProjectPage.9=Version
 ConfigureProjectPage.0=JRE Container
-SkeletonArtifactResolver.0=Archive type does not match.
+SkeletonArtifactResolver.0=This mold is not a skeleton.
 SkeletonArtifactResolver.1=Skeleton archive has not been found. Please change condition.
-SkeletonArtifactResolver.2=This skeleton is unavailable because the Vili version ({0}) of a fragment which it contains is not the same as the current Vili's version ({1}).  
+SkeletonArtifactResolver.2=This skeleton is unavailable because the Vili version ({1}) of a fragment which it contains ({0}) is not the same as the current Vili's version ({2}).  
 SkeletonArtifactResolver.3=This skeleton is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
+SkeletonArtifactResolver.4=This skeleton requests a non-fragment mold as a fragment: {0}
 SelectArtifactPage.0=Downloading a skeleton archive from repositories... (this process may take a lot of time)
 SelectArtifactPage.5=Available skeleton templates:
 SelectArtifactPage.6=Choose a skeleton from the templates
@@ -42,7 +43,7 @@ SelectArtifactPage.24=Detail
 SelectArtifactPage.25=Archives to be used:
 SelectArtifactPage.27=local
 SelectArtifactPage.28=This fragment is unavailable because its Vili version ({0}) is not the same as the current Vili's version ({1}).
-SelectArtifactPage.29=This archive is not a fragment.
+SelectArtifactPage.29=This mold is not a fragment.
 SelectArtifactPage.31=Search matched artifacts
 SelectArtifactPage.32=This fragment can not be added when creating new project.
 AddFragmentsWizard.1=Add fragments
