--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/impl/messages_ja.properties
@@ -9,3 +9,6 @@ ProjectBuilderImpl.21=\u30d5\u30a1\u30a4\u30eb\u3092\u51fa\u529b\u3057\u3066\u30
 ProjectBuilderImpl.23=\u30af\u30e9\u30b9\u30d1\u30b9\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.25=JDK\u30b3\u30f3\u30d7\u30e9\u30a4\u30a2\u30f3\u30b9\u306e\u8a2d\u5b9a\u3092\u30bb\u30c3\u30c8\u30a2\u30c3\u30d7\u3057\u3066\u3044\u307e\u3059...
 ProjectBuilderImpl.28=pom.xml\u306b\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306e\u4f9d\u5b58\u95a2\u4fc2\u3092\u8ffd\u52a0\u3057\u3066\u3044\u307e\u3059...
+MoldResolverImpl.1=\u96db\u5f62\u306e\u89e3\u6c7a\u3092\u3057\u3066\u3044\u307e\u3059...
+MoldResolverImpl.2=\u30d0\u30fc\u30b8\u30e7\u30f3\u304c\u5408\u81f4\u3059\u308b\u96db\u5f62\u3092\u691c\u7d22\u3057\u3066\u3044\u307e\u3059...
+
