フラグメントテンプレートにmailsenderを追加した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2786 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/preferences/messages.properties
@@ -31,6 +31,8 @@ PreferenceInitializer.98=[Ymir Standard Project] Add login feature.
 PreferenceInitializer.101=[YSP] Views and logics for CRUD
 PreferenceInitializer.102=[Ymir Standard Project] Add views and logics for CRUD.
 PreferenceInitializer.103=[YSP] Login feature
+PreferenceInitializer.105=Mailsender
+PreferenceInitializer.106=Add a feature to send e-mails using mailsender library.
 TemplatePreferencePage.0=Skeleton template to create new projects.
 TemplatePreferencePage.1=Error
 TemplatePreferencePage.2=Syntax error has been found in template: 
