[#YMIR-291]に対処した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@2914 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
@@ -19,6 +19,7 @@ YmirConfigurationControl.18=Eclipse Cooperation
 YmirConfigurationControl.19=Synchronize resources automatically with ResourceSynchronizer plugin
 YmirConfigurationControl.20=URL for the synchronization server
 YmirConfigurationControl.21={0} is required.
+YmirConfigurationControl.22=Invoke source generation process when a template is modified
 ViliProjectPreferencesControl.0={0} is required.
 ViliProjectPreferencesControl.1=There is no configurable settings.
 ViliProjectPreferencesControl.2=View
