--- a/org.seasar.ymir.eclipse/plugin_ja.properties
+++ b/org.seasar.ymir.eclipse/plugin_ja.properties
@@ -4,3 +4,7 @@ newWizard.description=Vili\u3092\u4f7f\u3063\u3066\u30d7\u30ed\u30b8\u30a7\u30af
 action.addFragments=\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u8ffd\u52a0\u30fb\u66f4\u65b0...
 action.action=\u30a2\u30af\u30b7\u30e7\u30f3
 action.togglePageAndHtml=Page\u3068HTML\u306e\u5207\u308a\u66ff\u3048
+action.viewOnServer=\u30b5\u30fc\u30d0\u3067\u8868\u793a
+action.createSource=\u81ea\u52d5\u751f\u6210...
+action.viewRootOnServer=\u30c8\u30c3\u30d7\u30da\u30fc\u30b8\u3092\u30b5\u30fc\u30d0\u3067\u8868\u793a
+
