--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages_ja.properties
@@ -19,6 +19,7 @@ YmirConfigurationControl.18=Eclipse\u9023\u643a
 YmirConfigurationControl.19=ResourceSynchronizer\u3092\u4f7f\u3063\u3066\u66f4\u65b0\u30ea\u30bd\u30fc\u30b9\u306e\u81ea\u52d5\u7684\u306b\u540c\u671f\u3055\u305b\u308b
 YmirConfigurationControl.20=\u540c\u671f\u30b5\u30fc\u30d0\u306eURL
 YmirConfigurationControl.21={0}\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
+YmirConfigurationControl.22=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u306e\u66f4\u65b0\u3092\u81ea\u52d5\u7684\u306b\u691c\u77e5\u3057\u3066\u81ea\u52d5\u751f\u6210\u51e6\u7406\u3092\u5b9f\u884c\u3059\u308b
 ViliProjectPreferencesControl.0={0}\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
 ViliProjectPreferencesControl.1=\u8a2d\u5b9a\u53ef\u80fd\u306a\u9805\u76ee\u306f\u3042\u308a\u307e\u305b\u3093\u3002
 ViliProjectPreferencesControl.2=\u30d3\u30e5\u30fc
