ひとまず対処を終えた。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3072 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
@@ -33,3 +33,4 @@ ViliProjectPreferencesControl.9=User name
 ViliProjectPreferencesControl.10=Password
 TemplateControl.0=Enable pr&oject specific settings
 TemplateControl.1=Template definition:
+MoldParametersControl.0={0} is required.
