・ルートパッケージ名をproperty画面で変更可能にした。 ・複数ルートパッケージ指定に対応した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3096 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
@@ -31,6 +31,7 @@ ViliProjectPreferencesControl.7=Driver's class name
 ViliProjectPreferencesControl.8=URL for connection
 ViliProjectPreferencesControl.9=User name
 ViliProjectPreferencesControl.10=Password
+ViliProjectPreferencesControl.11=Root package name
 TemplateControl.0=Enable pr&oject specific settings
 TemplateControl.1=Template definition:
 MoldParametersControl.0={0} is required.
