--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages.properties
@@ -32,6 +32,7 @@ ViliProjectPreferencesControl.8=URL for connection
 ViliProjectPreferencesControl.9=User name
 ViliProjectPreferencesControl.10=Password
 ViliProjectPreferencesControl.11=Root package name
+ViliProjectPreferencesControl.12=General
 TemplateControl.0=Enable pr&oject specific settings
 TemplateControl.1=Template definition:
 MoldParametersControl.0={0} is required.
