--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages_ja.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/ui/messages_ja.properties
@@ -32,6 +32,7 @@ ViliProjectPreferencesControl.8=\u63a5\u7d9aURL
 ViliProjectPreferencesControl.9=\u63a5\u7d9a\u30e6\u30fc\u30b6
 ViliProjectPreferencesControl.10=\u63a5\u7d9a\u30d1\u30b9\u30ef\u30fc\u30c9
 ViliProjectPreferencesControl.11=\u30eb\u30fc\u30c8\u30d1\u30c3\u30b1\u30fc\u30b8\u540d
+ViliProjectPreferencesControl.12=\u5168\u822c
 TemplateControl.0=\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u56fa\u6709\u306e\u8a2d\u5b9a\u3092\u6709\u52b9\u306b\u3059\u308b
 TemplateControl.1=\u30c6\u30f3\u30d7\u30ec\u30fc\u30c8\u5b9a\u7fa9:
 MoldParametersControl.0={0}\u3092\u6307\u5b9a\u3057\u3066\u4e0b\u3055\u3044\u3002
