--- a/org.seasar.ymir.eclipse/plugin_ja.properties
+++ b/org.seasar.ymir.eclipse/plugin_ja.properties
@@ -9,38 +9,7 @@ action.createSource=\u81ea\u52d5\u751f\u6210...
 action.viewRootOnServer=\u30c8\u30c3\u30d7\u30da\u30fc\u30b8\u3092\u30b5\u30fc\u30d0\u3067\u8868\u793a
 action.createPathMappings=Page\u3068HTML\u306e\u5bfe\u5fdc\u30c7\u30fc\u30bf\u3092\u751f\u6210...
 
-skeleton.ymir.name=\u57fa\u672c\u7684\u306aYmir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
-skeleton.ymir.description=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30d3\u30e5\u30fc\u5c64\u306b\u306fZPT\uff08Freyja ZPT\u30a8\u30f3\u30b8\u30f3\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
-skeleton.ymir+dbflute.name=Ymir+DBFlute\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
-skeleton.ymir+dbflute.description=Ymir\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30d3\u30e5\u30fc\u5c64\u306b\u306fZPT\uff08Freyja ZPT\u30a8\u30f3\u30b8\u30f3\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u30a2\u30af\u30bb\u30b9\u5c64\u306b\u306fDBFlute\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
-skeleton.ysp.name=Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff08YSP\uff09
-skeleton.ysp.description=The Ymir Project\u3067\u898f\u5b9a\u3057\u3066\u3044\u308b\u6a19\u6e96\u69cb\u6210\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30d3\u30e5\u30fc\u5c64\u306b\u306fZPT\uff08Freyja ZPT\u30a8\u30f3\u30b8\u30f3\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u30a2\u30af\u30bb\u30b9\u5c64\u306b\u306fDBFlute\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
-skeleton..name=Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff08YSP\uff09
-skeleton.ysp.description=The Ymir Project\u3067\u898f\u5b9a\u3057\u3066\u3044\u308b\u6a19\u6e96\u69cb\u6210\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002\u30d3\u30e5\u30fc\u5c64\u306b\u306fZPT\uff08Freyja ZPT\u30a8\u30f3\u30b8\u30f3\uff09\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u30a2\u30af\u30bb\u30b9\u5c64\u306b\u306fDBFlute\u3092\u4f7f\u7528\u3057\u307e\u3059\u3002
-
-PreferenceInitializer.1=JSON\u9023\u643a
-PreferenceInitializer.4=DBFlute
-PreferenceInitializer.3=DBFlute\u3092\u4f7f\u3063\u3066\u30c7\u30fc\u30bf\u30d9\u30fc\u30b9\u306b\u30a2\u30af\u30bb\u30b9\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.0=JSON\u30ea\u30af\u30a8\u30b9\u30c8\u3092\u53d7\u3051\u53d6\u3063\u305f\u308aJSON\u30ec\u30b9\u30dd\u30f3\u30b9\u3092\u8fd4\u3057\u305f\u308a\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.60=AMF\u9023\u643a
-PreferenceInitializer.61=AMF\u30d7\u30ed\u30c8\u30b3\u30eb\u3067\u901a\u4fe1\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002Flex\u304b\u3089Page\u30aa\u30d6\u30b8\u30a7\u30af\u30c8\u306e\u30e1\u30bd\u30c3\u30c9\u3092\u547c\u3073\u51fa\u3059\u3053\u3068\u304c\u3067\u304d\u308b\u3088\u3046\u306b\u306a\u308a\u307e\u3059\u3002
-PreferenceInitializer.63=\u30e6\u30fc\u30c6\u30a3\u30ea\u30c6\u30a3
-PreferenceInitializer.64=\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u52b9\u7387\u826f\u304f\u958b\u767a\u3059\u308b\u305f\u3081\u306e\u30e6\u30fc\u30c6\u30a3\u30ea\u30c6\u30a3\u30af\u30e9\u30b9\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.68=Vili\u30b9\u30b1\u30eb\u30c8\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
-PreferenceInitializer.69=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-PreferenceInitializer.71=Vili\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
-PreferenceInitializer.72=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-PreferenceInitializer.74=Vili Web\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30b9\u30b1\u30eb\u30c8\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
-PreferenceInitializer.75=Vili\u306eWeb\u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-PreferenceInitializer.76=\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\uff08Yonex\uff09
-PreferenceInitializer.77=Yonex\u3092\u4f7f\u3063\u305f\u7d71\u5408\u30c6\u30b9\u30c8\u74b0\u5883\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.79=Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\uff08YSP\uff09
-PreferenceInitializer.80=The Ymir Project\u3067\u898f\u5b9a\u3057\u3066\u3044\u308b\u6a19\u6e96\u69cb\u6210\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
-PreferenceInitializer.93=[YSP] \u57fa\u672c\u30ea\u30bd\u30fc\u30b9
-PreferenceInitializer.94=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u69cb\u7bc9\u3059\u308b\u305f\u3081\u306e\u57fa\u672c\u3068\u306a\u308b\u30ea\u30bd\u30fc\u30b9\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
-PreferenceInitializer.98=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002\uff08\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306fYmir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5c02\u7528\u3067\u3059\u3002\uff09
-PreferenceInitializer.101=[YSP] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af
-PreferenceInitializer.102=[Ymir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8] CRUD\u7528\u306e\u30d3\u30e5\u30fc\u3068\u30ed\u30b8\u30c3\u30af\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002\uff08\u3053\u306e\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u306fYmir\u6a19\u6e96\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u5c02\u7528\u3067\u3059\u3002\uff09
-PreferenceInitializer.103=[YSP] \u30ed\u30b0\u30a4\u30f3\u6a5f\u80fd
-PreferenceInitializer.105=\u30e1\u30fc\u30eb\u9001\u4fe1
-PreferenceInitializer.106=mailsender\u30e9\u30a4\u30d6\u30e9\u30ea\u3092\u4f7f\u3063\u3066\u30e1\u30fc\u30eb\u3092\u9001\u4fe1\u3059\u308b\u6a5f\u80fd\u3092\u8ffd\u52a0\u3057\u307e\u3059\u3002
+skeleton.skeleton.name=Vili\u30b9\u30b1\u30eb\u30c8\u30f3\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+skeleton.skeleton.description=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30b9\u30b1\u30eb\u30c8\u30f3\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
+skeleton.fragment.name=Vili\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u30d7\u30ed\u30b8\u30a7\u30af\u30c8
+skeleton.fragment.description=Vili\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u30d5\u30e9\u30b0\u30e1\u30f3\u30c8\u3092\u4f5c\u6210\u3059\u308b\u305f\u3081\u306e\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3092\u4f5c\u6210\u3057\u307e\u3059\u3002
