プロジェクト生成関連の機能からYmirに依存するコードを削除した。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3128 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
+++ b/org.seasar.ymir.eclipse/src/main/java/org/seasar/ymir/eclipse/wizards/messages.properties
@@ -1,9 +1,8 @@
 NewProjectWizard.1=Create project
 NewProjectWizard.2={0} is required.
-NewProjectWizard.11=New Ymir Project
+NewProjectWizard.11=New Vili Project
 NewProjectWizard.26=Project skeleton
 NewProjectWizard.27=Specify project skeleton.
-ConfigureParametersPage.0=Ymir project settings
 ConfigureParametersPage.1=Project settings
 ConfigureParametersPage.2=Specify project settings.
 ConfigureParametersPage.11=General
