システムコンソールを表示できるようにした。
git-svn-id: https://www.seasar.org/svn/ymir/eclipse/trunk@3338 ce2cb714-bd0d-0410-8c66-e472ade7ad34

--- a/org.seasar.ymir.eclipse/plugin_ja.properties
+++ b/org.seasar.ymir.eclipse/plugin_ja.properties
@@ -2,4 +2,5 @@ action.togglePageAndHtml=Page\u3068HTML\u306e\u5207\u308a\u66ff\u3048
 action.viewOnServer=\u30b5\u30fc\u30d0\u3067\u8868\u793a
 action.createSource=\u81ea\u52d5\u751f\u6210...
 action.viewRootOnServer=\u30c8\u30c3\u30d7\u30da\u30fc\u30b8\u3092\u30b5\u30fc\u30d0\u3067\u8868\u793a
+action.viewSystemConsole=\u30b7\u30b9\u30c6\u30e0\u30b3\u30f3\u30bd\u30fc\u30eb\u3092\u8868\u793a...
 action.createPathMappings=Page\u3068HTML\u306e\u5bfe\u5fdc\u30c7\u30fc\u30bf\u3092\u751f\u6210...
